--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ keywords: 여행,뷰티,패션,맛집,리뷰,기업취재,인물인터뷰,홍보
 
 tab_index: 0
 
-redirection_url: 
+redirection_url: https://goo.gl/forms/fVfMVmi7k353ohGJ2
 redirection_url_mobile:
 
 naver_site_verification: 
