--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ plugins:
   - jekyll-github-metadata
 
 lang: ko-KR
-title: 호미스튜디오
+title: 호미스튜디오 기자단 등록
 tagline: 취재홍보 마케팅 전문 기업
 description: 취재홍보 마케팅 전문 기업
 keywords: 여행,뷰티,패션,맛집,리뷰,기업취재,인물인터뷰,홍보,기자단,체험단,인플루언서
